Bug 142018 - [EMF] Few Arcs with different pens: wrong line width for the 3rd arc
Summary: [EMF] Few Arcs with different pens: wrong line width for the 3rd arc
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Bartosz
URL:
Whiteboard: target:7.6.0 target:7.5.2
Keywords:
Depends on:
Blocks: EMF-WMF
  Show dependency treegraph
 
Reported: 2021-05-01 13:24 UTC by Valek Filippov
Modified: 2026-02-08 17:04 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
EMF sample with Arcs (688 bytes, image/emf)
2021-05-01 13:24 UTC, Valek Filippov
Details
Screenshot for the attached sample opened in MSO win10 (3.67 KB, image/png)
2021-05-01 13:30 UTC, Valek Filippov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Valek Filippov 2021-05-01 13:24:15 UTC
Description:
LO draws third arc (second is invisible) with a thick line, MSO on win10 uses a thin orange line.

Steps to Reproduce:
Open attached EMF sample.

Actual Results:
Second from the right arc is rendered with thick orange stroke.

Expected Results:
Reference implementation draws it as a thin orange line.


Reproducible: Always


User Profile Reset: No



Additional Info:
The arc in question is the 3rd EMR in the file.
Comment 1 Valek Filippov 2021-05-01 13:24:58 UTC
Created attachment 171564 [details]
EMF sample with Arcs
Comment 2 Valek Filippov 2021-05-01 13:30:22 UTC
Created attachment 171565 [details]
Screenshot for the attached sample opened in MSO win10
Comment 3 Roman Kuznetsov 2021-05-03 13:43:12 UTC
confirm in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: a52590d76b89dc75be2aa87f4287624c89f1e82f
CPU threads: 4; OS: Mac OS X 11.3; UI render: default; VCL: osx
Locale: ru-RU (ru_RU.UTF-8); UI: en-US
Calc: threaded
Comment 4 Bartosz 2023-02-04 13:21:20 UTC
Review:
https://gerrit.libreoffice.org/c/core/+/146551
Comment 5 Commit Notification 2023-02-11 21:24:59 UTC
Bartosz Kosiorek committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bbdbe8ea2ef176ef6f08b30b3c18876c2c4f0c22

tdf#142018 Properly create Pen width if style is COSMETIC

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-02-13 10:44:11 UTC
Bartosz Kosiorek committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/78ca5b0421562a6204a561d390ac8a8692411421

tdf#142018 Properly create Pen width if style is COSMETIC

It will be available in 7.5.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.