tdf#142018 Properly create Pen width if style is COSMETIC

Change-Id: I6453058c4af352a3b0e14cbccbc1a67c73cd1426
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146551
Tested-by: Jenkins
Reviewed-by: Bartosz Kosiorek <gang65@poczta.onet.pl>
(cherry picked from commit bbdbe8ea2ef176ef6f08b30b3c18876c2c4f0c22)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146808
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>